--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 [ADC]
-; Level in volts
+; Trigger Level in volts
 trigger_level = 0.1
-; Values: CH1_PE, CH1_NE, CH2_PE, CH2_NE
+; Trigger source (Values: CH1_PE, CH1_NE, CH2_PE, CH2_NE)
 trigger_mode = CH1_PE
-; Buffer size in microseconds
+; Record signal Buffer size in microseconds (min 1 µs)
 buffer_time = 20
 
 [DAC]
-; Gen signal from source: IN1,IN2
-signal_source=IN1
-; Number of signal repetitions without delays
-count_burst=1
-; Number of repetitions with delay. Includes the number of repetitions without delay.
-repetition=3
-; Delay between repetitions.
-repetition_delay=0
+; Gen signal from source (IN1, IN2). Which input to use for recording data.
+signal_source = IN1
+; Number of signal repetitions without delays (NCYC - number of cycles/periods in a single burst).
+count_burst = 1
+; Number of repetitions with delay (NOR - Number of Repetitions/Bursts). Each repetition includes `count_burst` (NCYC) recordings without delay.
+repetition = 3
+; Delay between repetitions in microseconds.
+repetition_delay = 0
