--- a/config.ini
+++ b/config.ini
@@ -9,9 +9,16 @@ buffer_time = 20
 [DAC]
 ; Gen signal from source: IN1,IN2
 signal_source=IN1
+
 ; Number of signal repetitions without delays
 count_burst=1
+
 ; Number of repetitions with delay. Includes the number of repetitions without delay.
 repetition=3
+
 ; Delay between repetitions.
-repetition_delay=0
+; If there is a "repetition" number of repetitions, then the minimum allowed delay must be no less than:
+; buffer_time * count_burst + 1uS
+; Otherwise the signal may break. If there are no repetitions, the value is ignored
+; For example. buffer_time = 20, count_burst=2. 20 * 2 + 1 = 41 uS
+repetition_delay=21
