--- a/config.ini
+++ b/config.ini
@@ -13,5 +13,9 @@ signal_source = IN1
 count_burst = 1
 ; Number of repetitions with delay (NOR - Number of Repetitions/Bursts). Each repetition includes `count_burst` (NCYC) recordings without delay.
 repetition = 3
-; Delay between repetitions in microseconds.
+; Delay between repetitions.
+; If there is a "repetition" number of repetitions, then the minimum allowed delay must be no less than:
+; buffer_time * count_burst + 1uS
+; Otherwise the signal may break. If there are no repetitions, the value is ignored
+; For example. buffer_time = 20, count_burst=2. repetition_delay = 20 * 2 + 1 = 41 uS
 repetition_delay = 0
