--- a/config.ini
+++ b/config.ini
@@ -15,7 +15,7 @@ count_burst = 1
 repetition = 3
 ; Delay between repetitions.
 ; If there is a "repetition" number of repetitions, then the minimum allowed delay must be no less than:
-; buffer_time * count_burst + 1uS
+; buffer_time * count_burst + 1 µS
 ; Otherwise the signal may break. If there are no repetitions, the value is ignored
-; For example. buffer_time = 20, count_burst=2. repetition_delay = 20 * 2 + 1 = 41 uS
+; For example. buffer_time = 20, count_burst=2. repetition_delay = 20 * 2 + 1 = 41 µS
 repetition_delay = 0
