--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,21 @@
-[ADC]
-; Trigger Level in volts
+[ADC1]
+; IN1 Trigger Level in volts
 trigger_level=0.1
-; Trigger source (Values: CH1_PE, CH1_NE, CH2_PE, CH2_NE)
+; Trigger source (Values: CH1_PE, CH1_NE)
 trigger_mode=CH1_PE
 ; Record signal Buffer size in microseconds (min 1 µs)
 buffer_time=20
 
-[DAC]
-; Gen signal from source (IN1, IN2). Which input to use for recording data.
+[ADC2]
+; IN2 Trigger Level in volts
+trigger_level=0.1
+; Trigger source (Values: CH2_PE, CH2_NE)
+trigger_mode=CH2_PE
+; Record signal Buffer size in microseconds (min 1 µs)
+buffer_time=20
+
+[DAC1]
+; OUT1 Gen signal from source (IN1, IN2). Which input to use for recording data.
 signal_source=IN1
 ; Number of signal repetitions without delays (NCYC - number of cycles/periods in a single burst).
 count_burst=1
@@ -18,4 +26,18 @@ repetition=3
 ; buffer_time * count_burst + 1 µS
 ; Otherwise the signal may break. If there are no repetitions, the value is ignored
 ; For example. buffer_time = 20, count_burst=2. repetition_delay = 20 * 2 + 1 = 41 µS
-repetition_delay=21
+repetition_delay=50
+
+[DAC2]
+; OUT2 Gen signal from source (IN1, IN2). Which input to use for recording data.
+signal_source=IN2
+; Number of signal repetitions without delays (NCYC - number of cycles/periods in a single burst).
+count_burst=1
+; Number of repetitions with delay (NOR - Number of Repetitions/Bursts). Each repetition includes `count_burst` (NCYC) recordings without delay.
+repetition=3
+; Delay between repetitions.
+; If there is a "repetition" number of repetitions, then the minimum allowed delay must be no less than:
+; buffer_time * count_burst + 1 µS
+; Otherwise the signal may break. If there are no repetitions, the value is ignored
+; For example. buffer_time = 20, count_burst=2. repetition_delay = 20 * 2 + 1 = 41 µS
+repetition_delay=50
